--- a/Tea/index.css
+++ b/Tea/index.css
@@ -64,7 +64,7 @@
   }
   .swiper-slide img {
     width: 100%; /* 让图片自适应容器宽度 */
-    height: auto;
+    height: 400px;
     object-fit: cover;
   } 
 
@@ -78,6 +78,7 @@
 
     .swiper-slide img {
         height: 100vh;
+        object-fit: cover;
         
       }
 
