--- a/Tea/index.css
+++ b/Tea/index.css
@@ -64,7 +64,7 @@
   }
   .swiper-slide img {
     width: 100%; /* 让图片自适应容器宽度 */
-    height: 400px;
+    height: 100%;
     object-fit: cover;
   } 
 
@@ -77,8 +77,7 @@
     }
 
     .swiper-slide img {
-        height: 100vh;
-        object-fit: cover;
+        height: 100%;
         
       }
 
